# arena-ch0

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py  main.py  models.py
app/pipeline/: __init__.py  answer_question.py  calculate.py  extract.py  format_answer.py  parse_question.py  retrieve.py  verify.py
app/utils/: io.py  normalize.py
data/batches/: batch_001.jsonl
data/corpus/: sample_treasury_fixture.txt
data/gold/: batch_001_gold.jsonl
prompts/: extraction_prompt.txt  verification_prompt.txt
scripts/: classify_failures.py  run_batch.py  score_batch.py
skills/: officeqa_common_failures.md  officeqa_prompt.j2  officeqa_table_reading.md  verification_checklist.md
