[project]
name = "officeqa-agent"
version = "0.1.0"
description = "Document-grounded OfficeQA extraction agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.40.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
